--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "react-spa-boilerplate",
+  "name": "site-react-simple-chatbot",
   "version": "0.0.1",
-  "description": "React SPA Boilerplate for open source projects.",
+  "description": "React Simple Chatbot Website.",
   "scripts": {
-    "start": "webpack-dev-server --inline --content-base build/",
+    "start": "./node_modules/.bin/webpack-dev-server --inline --content-base build/ -d",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:watch": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
     "test:coverage": "nyc npm test",
-    "build": "webpack --config webpack.config.prod.js"
+    "build": "./node_modules/.bin/webpack -p"
   },
   "nyc": {
     "reporter": [
@@ -40,37 +40,47 @@
   },
   "homepage": "https://github.com/LucasBassetti/react-spa-boilerplate#readme",
   "devDependencies": {
-    "autoprefixer": "^7.0.1",
     "babel-core": "^6.7.7",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "6.24.0",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
-    "clean-webpack-plugin": "^0.1.8",
-    "copy-webpack-plugin": "^2.1.1",
-    "css-loader": "^0.28.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "coveralls": "^2.13.1",
+    "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
     "enzyme": "^2.8.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
-    "mocha": "^3.2.0",
+    "husky": "^0.13.4",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^9.12.0",
+    "mocha": "^3.4.2",
+    "node-sass": "^4.5.3",
     "nyc": "^10.2.0",
-    "precss": "^1.4.0",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
     "react-addons-test-utils": "^15.5.0",
-    "style-loader": "^0.16.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "redux-mock-store": "^1.2.3",
+    "sass-loader": "^6.0.6",
+    "sinon": "^2.3.7",
+    "sinon-chai": "^2.11.0",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.2.0",
+    "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-ga": "^2.2.0",
-    "react-simple-chatbot": "git+https://github.com/LucasBassetti/react-simple-chatbot.git"
+    "react-simple-chatbot": "git+https://github.com/LucasBassetti/react-simple-chatbot.git",
+    "styled-components": "^2.1.1"
   }
 }
