Hide footer and control content size

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ pids
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# Idea
+/.idea
