--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ Idea
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+.idea
