--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "nyc": "^11.0.2",
     "react-test-renderer": "^16.0.0",
     "sinon": "^7.1.0",
-    "styled-components": "^4.1.3",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.2",
@@ -85,13 +84,14 @@
   "dependencies": {
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "flatted": "^2.0.0",
     "onchange": "^5.2.0",
     "prettier": "^1.16.4",
-    "flatted": "^2.0.0",
     "prop-types": "^15.6.0",
     "random-id": "0.0.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "styled-components": "^4.1.3"
   },
   "peerDependencies": {
     "styled-components": "^4.0.0",
