Porting Aaron's updates MAG-654
Porting Aaron's updates MAG-654

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,7 @@ pids
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-node_modules
+node_modules/
+
+# Webstorm
+.idea/
