--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "file-loader": "^5.0.2",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
