fix content ref

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ pids
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+#modules lock
+.package-lock.json
+.yarn.lock
