--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "react-simple-chatbot",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "React Simple Chatbot",
   "main": "dist/react-simple-chatbot.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint lib/*.jsx",
     "prepublish": "npm run build",
     "prepush": "npm run lint && npm run test:coverage",
-    "start": "./node_modules/.bin/webpack-dev-server --inline --content-base build/",
+    "start": "./node_modules/.bin/webpack-dev-server ./example",
     "prettier-watch": "onchange '**/*.js' '**/*.jsx' -- prettier --write {{changed}}",
     "report-coverage": "nyc report --reporter=lcov > coverage.lcov && codecov",
     "test": "./node_modules/.bin/mocha tests/helpers/setup.js tests/**/*.spec.js --require @babel/register",
     "test:watch": "npm test -- --watch",
     "test:coverage": "nyc npm test",
-    "build": "./node_modules/.bin/webpack --config webpack.config.prod.js -p",
-    "analyze": "BUNDLE_ANALYZE=true ./node_modules/.bin/webpack --config webpack.config.prod.js -p"
+    "build": "./node_modules/.bin/webpack --config webpack.config.prod.js",
+    "analyze": "BUNDLE_ANALYZE=true ./node_modules/.bin/webpack --config webpack.config.prod.js"
   },
   "files": [
     "dist"
@@ -50,52 +50,54 @@
   },
   "homepage": "https://github.com/LucasBassetti/react-simple-chatbot#readme",
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-transform-arrow-functions": "^7.0.0",
-    "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
-    "chai": "^4.0.2",
-    "clean-webpack-plugin": "^0.1.16",
-    "codecov": "^3.1.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "husky": "^0.13.3",
-    "jsdom": "^9.12.0",
-    "mocha": "^5.2.0",
-    "nyc": "^11.0.2",
-    "react-test-renderer": "^16.0.0",
-    "sinon": "^7.1.0",
-    "styled-components": "^4.1.3",
-    "webpack": "^4.29.6",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-transform-arrow-functions": "^7.16.7",
+    "@babel/plugin-transform-object-assign": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/register": "^7.17.0",
+    "@babel/eslint-parser": "^7.17.0",
+    "babel-loader": "^8.2.3",
+    "chai": "^4.3.6",
+    "clean-webpack-plugin": "^4.0.0",
+    "codecov": "^3.8.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.3",
+    "husky": "^7.0.4",
+    "jsdom": "^19.0.0",
+    "mocha": "^9.2.1",
+    "nyc": "^15.1.0",
+    "react-test-renderer": "^16.14.0",
+    "sinon": "^13.0.1",
+    "styled-components": "^5.3.3",
+    "webpack": "^5.20.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "onchange": "^5.2.0",
-    "prettier": "^1.16.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "flatted": "^2.0.0",
-    "prop-types": "^15.6.0",
-    "random-id": "0.0.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "html-webpack-plugin": "^5.5.0",
+    "onchange": "^7.1.0",
+    "prettier": "^2.5.1",
+    "prop-types": "^15.8.1",
+    "random-id": "1.0.4",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1"
   },
   "peerDependencies": {
-    "styled-components": "^4.0.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "styled-components": "^5.3.3"
   }
 }
