--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "nyc": "^15.1.0",
     "react-test-renderer": "^18.2.0",
     "sinon": "^15.0.4",
+    "styled-components": "^6.0.0-rc.1",
     "webpack": "^5.82.1",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.1",
